syntax = "proto3";
package codes.spectrum.svdb.model.v1;
option go_package = "gitlab.spectrumdata.tech/sd3/svdb/go/model/v1";

import "v1/state.proto";
import "v1/warning.proto";
import "v1/column.proto";
import "v1/record.proto";

// обертка результата запроса
// NOTE: результат запроса это еще не сами данные,
// а только логический курсор над ними, соответственно
// ошибочные статусы на этой фазы - это ошибки SdQL,
// недостаток пермиссий и т.п., ошибки чтения самих данных
// будут упаковываться в Record
message QueryResult {

    // метаданные, содержащие структуру ответа: имена и типы полей, опции
    repeated Column columns = 1;

    // данные ответа в виде массива байтов
    repeated Record records = 2;

    // статус запроса - OK при успешном формировании плана запроса,  в случае ошибок SdQL (400)
    // или при нарушении ACL (403) или иных интернальных ошибках (500)
    State state = 3;

    // предупреждения, для вывода в потоке текста 
    repeated Warning warnings = 4;
}
